@@ -1,4 +1,5 @@
 {{$NEXT}}
+- die if undef or '' is passed as a destination to ReadTrace's methods
 
 1.5       2012-10-19 17:00:42 Europe/London
 - avoid a "defined-or", it's not strictly necessary and breaks ancient
